# zen-os

./: CMakeLists.txt  Kconfig  Kconfig.zenos  README.md
cmake/: app.cmake
ext/: CMakeLists.txt  Kconfig
ext/micropython/: CMakeLists.txt  Kconfig
ext/micropython/include/: mpconfigport.h
